css review spacing fixed

--- a/public/stylesheets/review.css
+++ b/public/stylesheets/review.css
@@ -86,20 +86,23 @@ h4 {
 
 .review-container-12 {
     position: relative;
+    height: 100%;
 }
 
 #review_button {
     margin: 10px;
-    background-color: rgb(244, 239, 235);
+    background-color: rgb(223, 200, 176);
     display: inline-block;
-    vertical-align: middle;
     line-height: normal;
     box-shadow: 0 0 5px 0 grey;
     cursor: pointer;
+    text-decoration: none;
+    flex-direction: row;
+    vertical-align: middle;
 }
 
 #review_button:hover {
-    background-color: rgb(223, 200, 176);
+    background-color: rgb(244, 239, 235);
     box-shadow: 0 0 10px 0 grey;
 }
 
@@ -109,22 +112,22 @@ h4 {
     font-size: 16px;
     font-weight: 200;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
 }
 
 .review_cancel_button {
-    background-color: rgb(244, 239, 235);
+    background-color: rgb(223, 200, 176);
     display: inline-block;
-    vertical-align: middle;
-    margin-left: 20px;
+    cursor: pointer;
+    margin-left: 10px;
     line-height: normal;
     box-shadow: 0 0 5px 0 grey;
 }
 
 .review_cancel_button:hover {
-    background-color: rgb(223, 200, 176);
+    background-color: rgb(244, 239, 235);
     box-shadow: 0 0 10px 0 grey;
 }
 
@@ -164,7 +167,7 @@ h4 {
 .review-container-91, .review-container-92, .review-container-93, .review-container-94, .review-container-95, .review-container-96, .review-container-97, .review-container-98, .review-container-99, .review-container-100  {
     height: 190px;
     border-bottom: 2px solid #ccc;
-    max-width:100%;
+    height: 100%;
 }
 
 .review-title {
